--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,21 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Demo</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width" />
-    <base href="/" />
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Booster</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/shards.min.css">
 </head>
-
 <body>
-<header>
-    <h1>Demo</h1>
-</header>
-<main>
-    <div class="container">
-        <div id="greeting">Hello Booster!</div>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-6">
+            <p>TEST BOOSTER</p>
+        </div>
     </div>
-</main>
-
+</div>
 </body>
-
 </html>
